# address-summary-organizing-tool

./: .dockerignore  DEPLOYMENT-GUIDE.md  Dockerfile  README-REACT.md  README.md  TESTING-CHECKLIST.md  docker-compose.yml  index.html  package-lock.json  package.json  static-index.html  update-theme.bat  update-theme.ps1  verify.html
.github/workflows/: deploy.yml  docker.yml
ai-eval-trace-service/: pyproject.toml
ai-eval-trace-service/src/: __init__.py
ai-eval-trace-service/src/core/: __init__.py  engine.py  models.py
ai-eval-trace-service/src/exporters/: __init__.py
ai-eval-trace-service/src/metrics/: __init__.py  address_metrics.py  base.py  defaults.py  registry.py
ai-eval-trace-service/src/traces/: __init__.py  tracer.py
ai-eval-trace-service/src/usps/: __init__.py  ams_validator.py
css/: styles.css  verify.css
docker/: Dockerfile.dev  nginx-static.conf  nginx.conf
docs/: AI_INTEGRATION_PLAN.md  ARCHITECTURE.md  INFRASTRUCTURE_DECISIONS.md  ML_ARCHITECTURE.md
infrastructure/: README.md  iam-deploy-policy.json
infrastructure/cloudformation/: template.yaml
infrastructure/terraform/: api.tf  cache.tf  databricks.tf  main.tf  ml.tf  outputs.tf  provider.tf  search.tf  secrets.tf  variables.tf  vpc.tf
js/: analyzer.js  app.js  matcher.js  savings-report.js  verifier.js  visualizations.js
js/ml/: address-embedder.js
react-app/: Dockerfile  README.md  package-lock.json  package.json
samples/: sample_system_a.csv  sample_system_b.csv
scripts/: deploy.ps1  deploy.sh  docker-run.ps1  docker-run.sh
src/: App.jsx  index.css
(+87 files in other folders)
