[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-address-eval-trace-service"
version = "1.0.0"
description = "Advanced AI model evaluation, service tracing, and audit dashboard for USPS address verification models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Address Analysis Engineering Team"}
]
keywords = ["ai", "evaluation", "tracing", "usps", "address-verification", "deepeval", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "click>=8.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
full = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "plotly>=5.0",
    "requests>=2.31",
]

[project.scripts]
ai-eval = "src.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
